--- a/index.html
+++ b/index.html
@@ -29,7 +29,25 @@
         <h1>Welcome to MyPortfolio</h1>
     </div>
     <div class="container content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut eros justo. Ut condimentum eros ut orci eleifend, eget euismod turpis commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam malesuada volutpat elit, sed rhoncus ipsum maximus nec. Sed molestie eros at nunc tincidunt, ut laoreet odio hendrerit. Aliquam ultricies faucibus felis, sit amet tempor sapien faucibus at. Nunc sit amet est id risus commodo imperdiet. Sed faucibus, felis ac aliquam vulputate, urna ipsum auctor diam, auctor hendrerit dolor augue vitae ipsum. Vivamus id magna sem. Aenean tristique ipsum enim, eu pellentesque velit bibendum vel.</p>
+        <div class="row">
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <img src="https://th.bing.com/th/id/R.e8f0ee85e41290e0491ea1c7b4360461?rik=rasUAVSbHbyk4g&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fhappy-emoji-transparent%2fhappy-emoji-transparent-3.png&ehk=6KBj0hyiOcBixyGa24SinetoBgDt7N5pqzBE5xXGZc8%3d&risl=&pid=ImgRaw&r=0" alt="" class="img-fluid mx-auto d-block">
+            </div>
+            <div class="col-md-6">
+                <div class="text-center"><h1>Introduction</h1></div>
+                <p class="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut eros justo. Ut condimentum eros ut orci eleifend, eget euismod turpis commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam malesuada volutpat elit, sed rhoncus ipsum maximus nec. Sed molestie eros at nunc tincidunt, ut laoreet odio hendrerit. Aliquam ultricies faucibus felis, sit amet tempor sapien faucibus at. Nunc sit amet est id risus commodo imperdiet. Sed faucibus, felis ac aliquam vulputate, urna ipsum auctor diam, auctor hendrerit dolor augue vitae ipsum. Vivamus id magna sem. Aenean tristique ipsum enim, eu pellentesque velit bibendum vel.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="text-center"><h1>Introduction</h1></div>
+                <p class="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut eros justo. Ut condimentum eros ut orci eleifend, eget euismod turpis commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam malesuada volutpat elit, sed rhoncus ipsum maximus nec. Sed molestie eros at nunc tincidunt, ut laoreet odio hendrerit. Aliquam ultricies faucibus felis, sit amet tempor sapien faucibus at. Nunc sit amet est id risus commodo imperdiet. Sed faucibus, felis ac aliquam vulputate, urna ipsum auctor diam, auctor hendrerit dolor augue vitae ipsum. Vivamus id magna sem. Aenean tristique ipsum enim, eu pellentesque velit bibendum vel.</p>
+            </div>
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <img src="https://th.bing.com/th/id/R.e8f0ee85e41290e0491ea1c7b4360461?rik=rasUAVSbHbyk4g&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fhappy-emoji-transparent%2fhappy-emoji-transparent-3.png&ehk=6KBj0hyiOcBixyGa24SinetoBgDt7N5pqzBE5xXGZc8%3d&risl=&pid=ImgRaw&r=0" alt="" class="img-fluid mx-auto d-block">
+            </div>
+        </div>
+        
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
